--- a/awesome/npm-for-web-devs/index.html
+++ b/awesome/npm-for-web-devs/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <meta name="author" content="{&quot;name&quot;=&gt;&quot;Kosala Nuwan Perera&quot;, &quot;avatar&quot;=&gt;&quot;https://avatars1.githubusercontent.com/u/958227?s=460&amp;u=9b166f138e17fd8a8a60177dbbaa79deff890ac6&amp;v=4&quot;, &quot;email&quot;=&gt;&quot;kosala.nuwan@gmail.com&quot;, &quot;public_site&quot;=&gt;&quot;https://kosalanuwan.github.io&quot;, &quot;github&quot;=&gt;&quot;kosalanuwan&quot;, &quot;twitter&quot;=&gt;&quot;kosalanuwan&quot;, &quot;linkedin&quot;=&gt;&quot;kosalanuwan&quot;, &quot;blog&quot;=&gt;&quot;kosalanuwan&quot;}">
-  <meta name="description" content="&lt;a href=&quot;https://kosalanuwan.github.io&quot;&gt;&lt;span&gt;@&lt;/span&gt;kosalanuwan&lt;/a&gt;'s developer journal. This bliki, its content, and opinions are my own.">
+  <meta name="description" content="&lt;a href=&quot;https://kosalanuwan.github.io&quot;&gt;&lt;span&gt;@&lt;/span&gt;kosalanuwan&lt;/a&gt;'s developer notes for himself. This bliki, its content, and opinions are his own.">
 
   
     <meta name="keywords" content="awesome">
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202008260545" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202009050704" type="text/css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
       </a>
     </h1>
     <p class="lead">
-      <a href="https://kosalanuwan.github.io"><span>@</span>kosalanuwan</a>'s developer journal. This bliki, its content, and opinions are my own.
+      <a href="https://kosalanuwan.github.io"><span>@</span>kosalanuwan</a>'s developer notes for himself. This bliki, its content, and opinions are his own.
     </p>
     
   
