--- a/etc/hello-world/index.html
+++ b/etc/hello-world/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202010241658" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202010241838" type="text/css">
 </head>
 
 <body>
@@ -86,26 +86,27 @@
     <blockquote></blockquote>
   
   
-  <p>Here’s why I gave up all those wide spread of productivity and notes taking apps from Evernote to Onenote, Workflowy, Trello, Todoist, and even Notion. They are all great apps, but it makes more sense, at least for me, to use GitHub since <a href="/etc/personal-productivity/">I interact with it daily, so why not use it for everything else</a>. I’m that nerd <img class="emoji" title=":nerd_face:" alt=":nerd_face:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f913.png" height="20" width="20">!  <em>GitHub used to be my unicorn, and now it is my bitch</em>, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course. Just a personal preference.</p>
+  <p>Here’s why I gave up all those wide spread of productivity and notes taking apps from Evernote to Onenote, Workflowy, Trello, Todoist, and even Notion. They are all great apps, but it makes more sense, at least for me, to use GitHub since <a href="/etc/personal-productivity/">I interact with it daily, so why not use it for everything else</a>.  Just my personal preference.</p>
+
+<blockquote>
+  <p>GitHub used to be my unicorn and now it is <em><strong>my bitch</strong></em>. I’m that nerd <img class="emoji" title=":nerd_face:" alt=":nerd_face:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f913.png" height="20" width="20">!</p>
+</blockquote>
 
 <p>In case you were wondering, this site is:</p>
 
 <ul>
-  <li>
-<img class="emoji" title=":lock:" alt=":lock:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f512.png" height="20" width="20"> Designed from the <a href="https://github.com/kosalanuwan/otto-theme">Otto Theme</a>
+  <li>Originally, a flavor of <a href="https://github.com/kosalanuwan/gh-site-otto-theme/#readme">the Otto theme</a>
 </li>
-  <li>Coded with <a href="https://github.com/microsoft/vscode">VS Code</a>
+  <li>Built and published with <a href="https://github.com/peaceiris/actions-gh-pages">GitHub Pages Actions</a>
 </li>
-  <li>Built on <a href="https://github.com/envygeeks/jekyll-docker">Jekyll Docker</a>
-</li>
-  <li>Published with <a href="https://github.com/peaceiris/actions-gh-pages">GitHub Actions for GitHub Pages</a>, and</li>
-  <li>Hosted on <a href="https://github.com/kosalanuwan/kosalanuwan.github.io">GitHub Pages</a>
+  <li>Hosted on <a href="https://github.com/kosalanuwan/bliki">GitHub Pages</a>, and</li>
+  <li>Developed with <a href="https://code.visualstudio.com/">VS Code</a> using <a href="https://github.com/kosalanuwan/devcontainers">developer container for Jekyll</a>
 </li>
 </ul>
 
 <p>And, this article amongst rest are written in <a href="">Markdown</a> with <a href="">Paper app</a>.</p>
 
-<p>For starters, you want to have a look at <a href="">Docsify</a>. It is a documentation site generator with <a href="">a great community support</a>. <a href="">Awesome Docsify</a> is a good source of information. <a href="">I played around a bit with Docsify</a> and <a href="">wrote a plugin or two</a> as well for my needs, but that was before I picked Jekyll and it’s still a work in-progress.</p>
+<p>For starters, you want to have a look at <a href="">Docsify</a> and it’s <a href="">awesome list</a> is a good source of information. <a href="">I played around a bit with Docsify</a> and <a href="">wrote a plugin or two</a> as well for my own sanity, but that was before I picked Jekyll and it’s still a work in-progress.</p>
 
 </article>
   </div>
